--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 } */
 
 #segment {
-  background-image: url(./component/img/headerPic4.jpg);
+  background-image: url(./img/headerPic4.jpg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
