--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* HOME */
+/* HOME ////////////////////////////////////////////////////////////*/
 /* Navbar ==========================================================*/
 .navbar {
   margin-top: 10px;
@@ -28,6 +28,30 @@
   text-shadow: 2px 2px 4px #000000;
 }
 
+.middle3-kata {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 60px;
+  margin-top: 200px;
+  margin-left: 100px;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.middle3-kata1 {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 50px;
+  margin-top: 50px;
+  margin-left: 100px;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.middle3-kata2 {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 50px;
+  margin-top: 100px;
+  margin-left: 800px;
+  text-shadow: 2px 2px 4px #000000;
+}
+
 /* Middlebar ======================================================*/
 .middle1 {
   padding-bottom: 10px;
@@ -45,7 +69,7 @@
   background-size: cover;
 }
 
-/* About Us */
+/* About Us /////////////////////////////////////////////////////////*/
 .aboutus {
   margin-top: 50px;
 }
@@ -56,18 +80,26 @@
 }
 
 #aboutus-footer {
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
-/* new password */
-#background-newPassword {
-  background-image: url(./img/login2.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
+/* new password /////////////////////////////////////////////////////*/
 .newPassword-form {
+  margin-top: 100px;
+}
+
+#newPassword-footer {
+  margin-top: 200px;
+}
+
+#background-newPassword {
+  background-color: white;
+}
+/* Login ////////////////////////////////////////////////////////////*/
+.login-form {
+  margin-top: 100px;
+}
+
+#login-footer {
   margin-top: 100px;
 }
