adding batch logo

--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,13 @@
 #login-footer {
   margin-top: 200px;
 }
+
+/* INFO ///////////////////////////////////////////////////////////// */
+.alumni-title {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.batch-logo1 {
+  margin-top: 50px;
+}
