--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@
 }
 
 .partner {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .partner-title {
@@ -141,4 +141,18 @@
 /* profileStudent ////////////////////////////////////////////////////*/
 .studentProfile {
   margin-top: 50px;
+}
+
+/* Job Details ///////////////////////////////////////////////////////*/
+.jobDetails {
+  margin-top: 50px;
+}
+
+.jobDetails-title {
+  text-align: center;
+}
+
+.jobDetails-isi {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
