adding layout partner logo

--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,11 @@
   text-align: center;
 }
 
+.partnerIsi {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 /* profileStudent /////////////////////////////////////////////////// */
 .profileStudent-title {
   text-align: center;
