--- a/src/App.css
+++ b/src/App.css
@@ -15,21 +15,21 @@
 }
 
 .header-kata1 {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Menlo, Monaco, "Courier New", monospace;
   font-size: 60px;
   margin-top: 300px;
   text-shadow: 2px 2px 4px #000000;
 }
 
 .header-kata2 {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Menlo, Monaco, "Courier New", monospace;
   font-size: 30px;
   margin-top: 100px;
   text-shadow: 2px 2px 4px #000000;
 }
 
 .middle3-kata {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Menlo, Monaco, "Courier New", monospace;
   font-size: 60px;
   margin-top: 200px;
   margin-left: 100px;
@@ -37,7 +37,7 @@
 }
 
 .middle3-kata1 {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Menlo, Monaco, "Courier New", monospace;
   font-size: 50px;
   margin-top: 50px;
   margin-left: 100px;
@@ -45,7 +45,7 @@
 }
 
 .middle3-kata2 {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Menlo, Monaco, "Courier New", monospace;
   font-size: 50px;
   margin-top: 100px;
   margin-left: 800px;
